fix: fix overflow of card

--- a/movie-app/scss/style.scss
+++ b/movie-app/scss/style.scss
@@ -153,7 +153,7 @@ body {
       transition: 0.5s;
       padding: 10px;
       line-height: 1.5;
-      overflow: scroll;
+      overflow:auto;
    }
 
    &__back-review {
